fix: overflow [safari]

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -12,7 +12,7 @@ html {
 
 body {   
   height: 100vh;
-  overflow-y: hidden;
+  overflow: hidden;
   box-sizing: border-box;
   background-image: linear-gradient(
     to right bottom, 
